# llvm-3.3-develop

./: Dockerfile  config.yaml
llvm-checking/: .gitignore  README.en.md  README.md  gllvm编译project中的代码.txt  stack.yaml  安装llvm-checking.txt
llvm-checking/doc/: NASAC2019规则检测原型工具竞赛的题目及要求说明.docx  NASAC2020原型工具竞赛-代码缺陷检测竞赛题目及要求.docx
llvm-checking/lib/itanium-abi-0.1.1.2/: itanium-abi.cabal
llvm-checking/src/: Main.hs  Slicing.hs  llvm-checking.cabal
llvm-checking/src/LLVM/: Checking.hs  Slicing.hs
llvm-checking/test/: calc.c  ptr2.c  test.cpp  test15.cpp  test2.cpp  test3.cpp  test5.cpp  tmp.c
llvm-checking/test/basic/: calc.c  call_of_file.c  cmp.c  file_call_fuction.c  file_for.c  file_open_close.c  for-switch.c  for_switch.c  fuction_call.c  if_printf_fuction_call.c  loop.c  putchar.c  strings_in_out.c  sum.c  sum2.c  sum3.c  test.c  test2.c  while_if.c
llvm-checking/test/hw20/: BufSizeIsUnknow_PtrCalcNonConst_NoCheck_OOB_case01.c  Divide_By_Zero_Test01.c  InFunc_MemsetsPackaged_DestOverflow_case01.c  InFunc_ScanfsPackaged_TypeOverflow_case01.c  InWhile_BufSizeIsArg_PtrCalcNonConst_InvalidCheck_StructField_OOB_case02.c  InWhile_BufSizeUnKnown_PtrCalcNonConst_InvalidCheck_StructField_OOB_case01.c  InWhile_IntegerOverflow_case08.c  MultiLocalVar_MemAlloc_Partially_Release_case01.c  NullPointCase1.c  NullPointCase2.cpp  SQLInjectionCase01.cpp  Sprintfs_DestOverflow_case03.c  WhileCopyOverflow_case02.c  (+9 more)
llvm-checking/test/test1/: 1536.cpp  1537.cpp  1540.cpp  1552.cpp  408.c  413.c  414.c  415.c  429.c  448.c  449.c  533.c  574.c  678.c  787.c  CMakeLists.txt
(+352 files in other folders)
